@@ -1,0 +1,74 @@
+HOWTO-RELEASE: 
+Notes on releasing.  <mike@bangstate.com> 
+
+1. 
+
+Commit any unsaved changes. 
+
+2. 
+
+"make clean"
+
+3. 
+
+Create html/vX.X.html.  Take ChangeLog entries and html-ify in
+there. Easist thing to do is take html/vX.(X-1).html and use 
+it as a template. 
+
+4. 
+
+Add any new files that have been created that should be part 
+of the distrubituion (like the html file in step 2), to 
+TIFFFILES in Makefile.in
+
+5. 
+
+Make sure tif_dir.c in lzw-compression-kit is in sync with the 
+main tree. 
+
+6. 
+
+Increment version in file "VERSION" 
+
+
+7. 
+
+sh configure; make; make install (to test). 
+
+
+8. 
+
+make release. 
+
+9. 
+
+make distclean
+
+10. 
+
+cvs commit
+
+11. 
+
+ftp ftp.onshore.com; 
+cd /home/ftp/pub/libtiff
+put ../tiff-vn-n-n.zip .
+put ../tiff-vn-n-n.tar.gz .
+
+12
+
+ftp ftp.libtiff.org
+lcd html
+mput *.html
+put ../tiff-vn-n-n.zip .
+put ../tiff-vn-n-n.tar.gz .
+
+13.  
+
+Announce to list, tiff@olympiakos.com
+
+
+
+
+
+
