@@ -1,1 +1,1 @@
-define TIFF_VNUM "3.5.5 (release)"
+define TIFF_VNUM "3.5.6 (release)"
