@@ -14,11 +14,11 @@ TIFF Software
 <B>Home Page</B>: <A HREF="http://www.libtiff.org/">
   http://www.libtiff.org</A> <BR>
 <B>FAQ Page</B>: <I>forthcoming</I><BR>
-<B>Latest Release</B>: <A HREF="v3.5.5.html">v3.5.5</A><BR>
-<B>Latest Software</B>: <A HREF="v3.5.5.html">v3.5.5</A><BR>
+<B>Latest Release</B>: <A HREF="v3.5.6.html">v3.5.6</A><BR>
+<B>Latest Software</B>: <A HREF="v3.5.6.html">v3.5.6</A><BR>
 <B>Master FTP Site</B>: <A HREF="ftp://ftp.onshore.com/pub/libtiff">ftp.onshore.com</A> , directory pub/libtiff (Active mode FTP only!)<BR>
-<B>HTTP Download</B>: <A HREF=http://www.libtiff.org/tiff-v3.5.5.tar.gz>http://www.libtiff.org/tiff-v3.5.5.tar.gz</a>,  <A HREF=http://www.libtiff.org/tiff-v3.5.5.zip>http://www.libtiff.org/tiff-v3.5.5.zip</a><BR> 
-<B>LZW Compression Kit:</B> <A HREF="libtiff-lzw-compression-kit-1.1.tar.gz">libtiff-lzw-compression-kit-1.1.tar.gz</A><BR>
+<B>HTTP Download</B>: <A HREF=http://www.libtiff.org/tiff-v3.5.6.tar.gz>http://www.libtiff.org/tiff-v3.5.6.tar.gz</a>,  <A HREF=http://www.libtiff.org/tiff-v3.5.6.zip>http://www.libtiff.org/tiff-v3.5.6.zip</a><BR> 
+<B>LZW Compression Kit:</B> <A HREF="libtiff-lzw-compression-kit-1.2.tar.gz">libtiff-lzw-compression-kit-1.1.tar.gz</A><BR>
 <B>Mailing List</B>: <a href=mailto:tiff@olympiakos.com>tiff@olympiakos.com</a> <BR>
 <B>Mailing List Subscription</b>: <a href=mailto:tiff-request@olympiakos.com>tiff-request@olympiakos.com</a> ("subscribe tiff" in body of message). <BR>
 <B>Mailing List Archive</b>: <A HREF= http://www.remotesensing.org/lists/libtiff_archive/maillist.html>http://www.remotesensing.org/lists/libtiff_archive/maillist.html</A>  <BR>
@@ -84,7 +84,7 @@ The following sections are included in this documentation:
 <P>
 <HR>
 <em> 
-$Id: index.html,v 1.28 2000-07-13 14:58:16 mwelles Exp $
+$Id: index.html,v 1.29 2000-12-19 20:12:53 mwelles Exp $
 </em> 
 
 </BODY>
