@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-Changes in TIFF v3.5.4
+Changes in TIFF v3.5.5
 </TITLE>
 </HEAD>
 
@@ -149,7 +149,7 @@ The following information is located here:
 
 <HR>
 
-Last updated $Date: 2000-03-29 04:35:28 $.
+Last updated $Date: 2000-12-19 20:12:53 $.
 
 </BODY>
 </HTML>
