@@ -1,0 +1,180 @@
+<HTML>
+<HEAD>
+<TITLE>
+Changes in TIFF v3.5.6
+</TITLE>
+</HEAD>
+
+<BODY BGCOLOR=white>
+<FONT FACE="Helvetica, Arial, Sans">
+<FONT FACE="Helvetica, Arial, Sans"> 
+
+<BASEFONT SIZE=4>
+<B><FONT SIZE=+3>T</FONT>IFF <FONT SIZE=+2>C</FONT>HANGE <FONT SIZE=+2>I</FONT>NFORMATION</B>
+<BASEFONT SIZE=3>
+
+<UL>
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+<B>Current Version</B>: v3.5.6<BR>
+<B>Previous Version</B>: <A HREF=v3.5.5.html>v3.5.5</a><BR>
+<B>Master FTP Site</B>: <A HREF="ftp://ftp.onshore.com/pub/libtiff">ftp.onshore.com</a>, directory pub/libtiff</A><BR>
+<B>Master HTTP Site</B>: <A HREF="http://www.libtiff.org/">http://www.libtiff.org</a> 
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+</UL>
+
+<P>
+This document describes the changes made to the software between the
+<I>previous</I> and <I>current</I> versions (see above).
+If you don't find something listed here, then it was not done in this
+timeframe, or it was not considered important enough to be mentioned.
+The following information is located here:
+<UL>
+<LI><A HREF="#configure">Changes in the software configuration</A>
+<LI><A HREF="#libtiff">Changes in libtiff</A>
+<LI><A HREF="#tools">Changes in the tools</A>
+<LI><A HREF="#lzwkit">Changes in the LZW compression kit</A>
+</UL>
+<p> 
+<P><HR WIDTH=65% ALIGN=left>
+
+<A NAME="configure"><B><FONT SIZE=+3>C</FONT>HANGES IN THE SOFTWARE CONFIGURATION:</B></A>
+
+<UL>
+
+	<LI> Added GNULDdso target an`d switched linux and freebsd to use it. 
+	<LI> tools/Makefile.in: Modified to install properly on SGI.
+	<LI> configure:  Fixed stupid mistake in libc6 test on Linux
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<A NAME="libtiff"><B><FONT SIZE=+3>C</FONT>HANGES IN LIBTIFF:</B></A>
+
+
+<UL> 
+
+	<LI> tools/rgb2ycbcr.c: fixed output strip size to account for vertical 
+	roundup if rows_per_strip not a multiple of vertical sample size.
+
+	<LI> tif_dir.c: Clear TIFF_ISTILED flag in TIFFDefaultDirectory
+	as per http://bugzilla.remotesensing.org/show_bug.cgi?id=18
+	from vandrove@vc.cvut.cz.
+
+	<LI> Modified tif_packbits.c decoding to avoid overrunning the
+	output buffer, and to issue a warning if data needs to be
+	discarded.  See http://bugzilla.remotesensing.org/show_bug.cgi?id=18
+
+	<LI> Modified TIFFClientOpen() to emit an error on an attempt to
+	open a comperessed file for update (O_RDWR/r+) access.  This is
+	because the compressor/decompressor code gets very confused when
+	the mode is O_RDWR, assuming this means writing only.  See
+	bug http://bugzilla.remotesensing.org/show_bug.cgi?id=13
+
+	<LI> Applied patch for 0x0000 sequences in tif_fax3.h's definition
+	of EXPAND1D() as per bug 11 (from Roman). 
+
+	<LI> Fixed tiffcomp.h to avoid win32 stuff if unix #defined, to improve
+	cygwin compatibility.
+
+	<LI> Applied patch from Roman Shpount to tif_fax3.c.  This seems to
+	be a proper fix to the buffer sizing problem.  See 
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=11
+
+	<LI> Fixed tif_getimage.c to fix overrun bug with YCbCr images without
+	downsampling.  http://bugzilla.remotesensing.org/show_bug.cgi?id=10
+	Thanks to Nick Lamb <njl98r@ecs.soton.ac.uk> for reporting the
+	bug and proving the patch.
+	
+	<LI> Fixed tif_jpeg.c so avoid destroying the decompressor before
+	we are done access data thanks to bug report from:
+	Michael Eckstein <eckstein@gepro.cz>.
+
+	<LI> tif_flush.c: Changed so that TIFFFlushData() doesn't return an
+	error when TIFF_BEENWRITING is not set.  This ensures that the
+	directory contents can still be flushed by TIFFFlush().
+
+	<LI> Reverted tif_flush change.
+
+	<LI> tif_open.c: Don't set MMAP for O_RDWR files.
+
+	<LI> tif_open.c: Set STRIPCHOP_DEFAULT for O_RDWR as well as O_RDONLY
+	so that files opened for update can be strip chopped too.
+
+	<LI> tif_read.c: fixed up bug with files missing rowsperstrip and
+	the strips per separation fix done a few weeks ago.
+
+	<LI> Tentatively added support for SAMPLEFORMAT_COMPLEXIEEEFP, and
+	SAMPLEFORMAT_COMPLEXINT.
+
+	<LI> index.html, bugs.html: added bugzilla info. 
+
+	<LI> tif_read.c: fix subtle bug with determining the number of
+	rows for strips that are the last strip in a separation but
+	not the last strip of all in TIFFReadEncodedStrip().  
+
+	<LI> Applied 16/32 bit fix to tif_fax3.c.  Fix supplied by
+	Peter Skarpetis <peters@serendipity-software.com.au>
+
+	<LI> Modified tiffio.h logic with regard to including windows.h.  It
+	won't include it when building with __CYGWIN__.
+
+	<LI> README: update to mention www.libtiff.org, don't list Sam's old
+	email address.
+
+	<LI> configure: Fixed DSO test for Linux as per patch from
+	  Jan Van Buggenhout <chipzz@Ace.ULYSSIS.Student.KULeuven.Ac.Be>.
+
+	<LI> libtiff/tif_dirread.c: Don't use estimate strip byte count for
+	one tile/strip images with an offset, and byte count of zero. These
+	could be "unpopulated" images. 
+
+	<LI> contrib/addtiffo: Added "averaging" resampling option.
+
+	<LI> tools/tiffsplit.c: Copy TIFFTAG_SAMPLEFORMAT.
+
+	<LI> tif_win32.c:  Applied patch to fix overreads and ovverwrites
+	  caught by BoundsChecker.  From Arvan Pritchard 
+	  <arvan.pritchard@infomatix.co.uk>  (untested). 
+	
+        <LI> tif_getimage.c:  Applied patch to silence VC6 warnings.  From 
+	  Arvan Pritchard <arvan.pritchard@informatix.co.uk>
+	
+	<LI> tif_lzw.c:  Applied patch to silence VC6 warnings.  From 
+	  Arvan Pritchard <arvan.pritchard@informatix.co.uk>
+
+
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<A NAME="tools"><B><FONT SIZE=+3>C</FONT>HANGES IN THE TOOLS:</B></A>
+
+<UL>
+
+	<LI>  Modified tiff2bw to ensure portions add to 100%, and that
+	 white is properly recovered.  See bug
+	 http://bugzilla.remotesensing.org/show_bug.cgi?id=15 Patch
+	 c/o Stanislav Brabec <utx@penguin.cz>
+
+	<LI> Added contrib/stream (stream io) code submitted by Avi Bleiweiss.
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<A NAME="lzwkit"><B><FONT SIZE=+3>C</FONT>HANGES IN THE LZW COMPRESSION KIT</B></A>
+<UL> 
+
+    <LI> updated tif_dir.c to reflect changes to no-lzw tif_dir.c
+
+</UL>
+
+<A HREF="index.html"><IMG SRC="images/back.gif"></A> TIFF home page.<BR>
+
+<HR>
+
+Last updated $Date: 2000-12-19 20:12:53 $.
+
+</BODY>
+</HTML>
